<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSsn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ssn"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tvMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/major"/>

        <TextView
            android:id="@+id/tvMinor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minor"/>

        <TextView
            android:id="@+id/tvGpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gpa"/>

        <TextView
            android:id="@+id/tvDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"/>

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <TextView
            android:id="@+id/tvState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"/>

        <TextView
            android:id="@+id/tvBlankSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

</LinearLayout>